Clean up cell detection code (slightly)
Limited changes that should not make any difference in behavior (if I've done them properly).